--- a/src/Spot/Navigation/index.css
+++ b/src/Spot/Navigation/index.css
@@ -8,7 +8,6 @@
 
 .kb-navbar-items, .kb-navbar-items:hover, kb-navbar-items:focus{
     width: 33%;
-    
     padding: 5px; 
 }
 
@@ -20,8 +19,12 @@
 
   .nav-link:hover {
     background-color: rgba(255, 255, 255, 0.1); /* Light hover effect */
+    color: #8017f5;
   }
-  
+  .nav-link:focus {
+    color: #8017f5;
+  }
+
   .kb-active .nav-link {
     font-weight: bold; /* Optionally highlight the active link with bold text */
   }
