--- a/src/Spot/Navigation/index.css
+++ b/src/Spot/Navigation/index.css
@@ -9,6 +9,7 @@
 .kb-navbar-items, .kb-navbar-items:hover, kb-navbar-items:focus{
     width: 33%;
     padding: 5px; 
+    text-align: center;
 }
 
 .nav-link {
