--- a/src/Spot/Admin/Admin.css
+++ b/src/Spot/Admin/Admin.css
@@ -35,3 +35,35 @@
     background-color: green;
     color: white;
 }
+
+.sp-admin-form-container {
+    background-color: black;
+    color: white;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.sp-admin-input-field {
+    background-color: black;
+    color: white;
+    border: 1px solid purple;
+    padding: 10px;
+    margin-bottom: 10px;
+    width: calc(100% - 20px);
+}
+
+.sp-admin-btn-primary {
+    padding: 10px 15px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    background-color: purple;
+    color: white;
+}
+
+.sp-admin-error {
+    color: red;
+    margin-bottom: 10px;
+}
