--- a/src/Spot/Post/SelectedTrack.css
+++ b/src/Spot/Post/SelectedTrack.css
@@ -8,10 +8,10 @@
   .selected-track-image {
     width: 100px;
     height: 100px;
-    border: #800080;
+    border: #7009e3;
   }
   
   .selected-track-text {
-    color: #800080; /* Purple */
+    color: #7009e3; /* Purple */
   }
   
