--- a/src/Spot/Feed/PostView.css
+++ b/src/Spot/Feed/PostView.css
@@ -21,7 +21,7 @@
     width: 100%; /* Full width of the post list */
     margin-bottom: 20px;
     background-color: black;
-    border: 1px solid purple;
+    border: 1px solid #7009e3;
     border-radius: 20px;
     color: white;
     display: flex;
