--- a/src/Spot/OtherProfile/index.css
+++ b/src/Spot/OtherProfile/index.css
@@ -36,7 +36,7 @@ body {
   
 .profile-username {
     font-size: 1.2em;
-    background: purple;
+    background: #7009e3;
     padding: 3px 8px;
     border-radius: 15px;
 }
@@ -54,7 +54,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid purple;
+    border: 2px solid #7009e3;
     border-radius: 20px;
     padding: 10px;
     overflow-y: auto;
@@ -64,7 +64,7 @@ body {
 /* Heading Styles */
 .heading {
     font-size: 1.25em;
-    background: purple;
+    background: #7009e3;
     padding: 5px;
     border-radius: 15px;
     width: 100%;
@@ -104,7 +104,7 @@ body {
   
 /* Gym Statistics Specific */
 .gym-stat-item {
-    border: 1px solid purple;
+    border: 1px solid #7009e3;
     padding: 5px;
     margin: 5px;
     display: flex;
