--- a/src/Spot/Profile/Post.css
+++ b/src/Spot/Profile/Post.css
@@ -10,7 +10,7 @@
 .card {
     flex: 0 1 calc(33.33% - 20px); /* No growth, shrink if necessary, calculate width to factor in gaps */
     background-color: black;
-    border: 2px solid purple;
+    border: 2px solid #7009e3;
     border-radius: 20px;
     color: white;
     overflow: hidden;
