--- a/src/Spot/Profile/index.css
+++ b/src/Spot/Profile/index.css
@@ -8,7 +8,7 @@
     padding: 20px;
 }
 
-.card {
+.sp-card {
     flex: 0 1 calc(33.33% - 40px); /* Default to three columns on large screens */
     max-width: calc(33.33% - 40px);
     margin-bottom: 20px;
@@ -16,7 +16,7 @@
 
 /* Medium screens (tablets, large phones, small desktops) */
 @media (max-width: 1024px) {
-    .card {
+    .sp-card {
         flex: 0 1 calc(50% - 40px); /* Two columns on medium screens */
         max-width: calc(50% - 40px);
     }
@@ -24,7 +24,7 @@
 
 /* Small screens (phones) */
 @media (max-width: 768px) {
-    .card {
+    .sp-card {
         flex: 0 1 calc(100% - 40px); /* One column on small screens */
         max-width: calc(100% - 40px);
     }
@@ -161,3 +161,21 @@ body {
 .header-icon {
     margin-right: 5px;
 }
+
+/* Button Styles for Profile Page */
+.edit-button {
+    background-color: black;       
+    color: white;                 
+    border: 2px solid #7009e3;   
+    border-radius: 20px;          
+    padding: 10px 20px;         
+    font-size: 1em;              
+    cursor: pointer;               
+    transition: all 0.3s ease;   
+}
+
+.edit-button:hover {
+    background-color: #7009e3;    
+    color: black;               
+}
+
