--- a/src/Spot/Login/styles.css
+++ b/src/Spot/Login/styles.css
@@ -4,6 +4,10 @@
     padding: 20px;
     border-radius: 5px;
   }
+
+  .kb-login-page-container{
+    width: 100%;
+  }
   
   .sp-input-field {
     background-color: black;
@@ -15,12 +19,17 @@
   }
   
   .sp-btn {
+    width: 23%;
+    padding: 5px; 
+    text-align: center;
     padding: 10px 15px;
     margin-top: 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-weight: bold;
+    margin-right: 2%;
+    
   }
   
   .sp-btn-primary {
