--- a/src/Spot/Profile/Post.css
+++ b/src/Spot/Profile/Post.css
@@ -22,8 +22,8 @@
 
 .card-img-top {
     width: 100%;
-    height: 120px;
-    object-fit: cover;
+    height: 450px;
+    object-fit: contain;
 }
 
 .card-body {
